# indi_hic_agent

./: .travis.yml  CMakeLists.txt  HICFocus_sk.xml  README.md  README.rst  agent_hic.cpp  agent_hic.cpp.autosave  agent_hic.h  config.h.cmake  group.cpp  group.h  hic_focus_client.cpp  hic_focus_client.h  image.cpp  image.h  indi_hic_agent.xml.cmake  indi_hicfocus_agent.xml.cmake  indi_hicfocus_client.cpp  indi_hicfocus_client.h  indi_hicfocus_driver.cpp  indi_hicfocus_driver.h  polynomialfit.cpp
